--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -1,3 +1,4 @@
+<!--HTML page-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,6 +8,7 @@
     <title>Methods for Adding CSS</title>
   </head>
   <body>
+    <link rel="stylesheet" href="style.css">    
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
     <button>Inline Method</button>
