--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <p class="odd">Number 1 - I'm a class!</p>
-    <div id="even">Number 2 - I'm one ID.</div>
-    <p class ="odd three">Number 3 - I'm a class, but cooler!</p>
-    <div id="even">Number 4 - I'm another ID.</div>
+    <div id="two">Number 2 - I'm one ID.</div>
+    <p class="odd font-size">Number 3 - I'm a class, but cooler!</p>
+    <div id="four" class="font-size">Number 4 - I'm another ID.</div>
     <p class ="odd five">Number 5 - I'm a class!</p>
   </body>
 </html>
